--- a/Basic Web Programming/1. Text Formatting/MarkerTeks.html
+++ b/Basic Web Programming/1. Text Formatting/MarkerTeks.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <h2>Membuat Marker Teks</h2>
+    <p>Marker biasanya digunakan untuk menandai teks yang penting atau kata kunci yang penting. Marker di HTML dapat kita buat dengan tag mark.</p>
+    <h3>Contoh:</h3>
+
     <p>
-        
+        Marker biasanya digunakan untuk menandai bagian teks yang penting. Kalau di dunia nyata, kita <mark>menggunakan stabilo</mark> untuk membuat marker.
     </p>
+
 </body>
 </html>
