--- a/Basic Web Programming/1. Text Formatting/Link.html
+++ b/Basic Web Programming/1. Text Formatting/Link.html
@@ -50,7 +50,7 @@
       handphone.
     </p>
     <p>
-        Untuk lebih lengkapnya, silahkan buka: <a href="https://www.instagram.com/_febrii0/" target="_blank" title="Menuju Instagram Febriansyah">Instagram Febriansyah</a>.
+        Untuk lebih lengkapnya, silahkan buka: <a href="https://www.instagram.com/_febrii0/" title="Menuju Instagram Febriansyah">Instagram Febriansyah</a>.
         Dan mengenal lebih dekat.
     </p>
 
