Menambahkan materi pada video

--- a/Basic Web Programming/6. Audio dan Video/Audio/AddAudio.html
+++ b/Basic Web Programming/6. Audio dan Video/Audio/AddAudio.html
@@ -17,6 +17,10 @@
         samp{
             color: green;
         }
+
+        pre{
+            color: green;
+        }
     </style>
 
 </head>
@@ -30,9 +34,9 @@
 
     <h3>Susunan codenya seperti dibawah:</h3>
     <pre>
-        audio controls
-            source src="file-audio.mp3" type="audio/mpeg" /
-        audio
+        &#60audio controls&#62
+            &#60source src="file-audio.mp3" type="audio/mpeg"&#47&#62
+        &#60&#47audio&#62
     </pre>
     <p>Contoh:</p>
 
